@@ -37,6 +37,7 @@ public abstract class Event {
   public final static int CONSUME_SUCCESS = 22;
   public final static int CHOOSE_PRODUCT = 24;
   public final static int SET_RECIPE_ID = 26;
+  public final static int CONFIRM_FREEZING = 28;
 
   abstract public int getType();
 
